flux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: askbias
  labels:
    app: askbias
spec:
  replicas: 1
  selector:
    matchLabels:
      app: askbias
  template:
    metadata:
      labels:
        app: askbias
    spec:
      imagePullSecrets:
        - name: docker-hub-mever-creds
      volumes:
        - name: askbias-secrets
          secret:
            secretName: askbias-secrets
            items:
              - key: .htpasswd
                path: .htpasswd
              - key: flask_secret
                path: flask_secret.txt
        - name: askbias-sqlite
          persistentVolumeClaim:
            claimName: askbias-sqlite-pvc
      containers:
        - name: askbias
          image: registry.mever.gr/mever/askbias:main-915e94c8-2024-12-12.120119 # {"$imagepolicy": "mever-services:askbias-repo-policy"}
          ports:
            - containerPort: 5000
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 5000
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              memory: "1Gi"
          volumeMounts:
            - name: askbias-secrets
              mountPath: /app/secrets
              readOnly: true
            - name: askbias-sqlite
              mountPath: /app/sqlite
