flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: askbias
  labels:
    app: askbias
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: askbias
